SEC-BASELINE: add rate limiting middleware

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 PORT=8080
 DB_DSN=postgres://qms:qms@localhost:5432/qms?sslmode=disable
+RATE_LIMIT_PER_MIN=120
+RATE_LIMIT_BURST=30
+TENANT_RATE_LIMIT_PER_MIN=600
+TENANT_RATE_LIMIT_BURST=120
 AUTH_PORT=8081
+AUTH_RATE_LIMIT_PER_MIN=120
+AUTH_RATE_LIMIT_BURST=30
+AUTH_TENANT_RATE_LIMIT_PER_MIN=300
+AUTH_TENANT_RATE_LIMIT_BURST=60
 NOTIF_PORT=8082
 NOTIF_POLL_SECONDS=5
 NOTIF_BATCH_SIZE=50
@@ -10,6 +18,10 @@ NOTIF_EMAIL_PROVIDER=stub
 NOTIF_WA_PROVIDER=stub
 NOTIF_PUSH_PROVIDER=stub
 ADMIN_PORT=8083
+ADMIN_RATE_LIMIT_PER_MIN=120
+ADMIN_RATE_LIMIT_BURST=30
+ADMIN_TENANT_RATE_LIMIT_PER_MIN=300
+ADMIN_TENANT_RATE_LIMIT_BURST=60
 ANALYTICS_PORT=8084
 ANOMALY_WAIT_THRESHOLD_SECONDS=1800
 ANOMALY_INTERVAL_SECONDS=300
