SEC-BASELINE: rate limit analytics and realtime

--- a/.env.example
+++ b/.env.example
@@ -23,9 +23,15 @@ ADMIN_RATE_LIMIT_BURST=30
 ADMIN_TENANT_RATE_LIMIT_PER_MIN=300
 ADMIN_TENANT_RATE_LIMIT_BURST=60
 ANALYTICS_PORT=8084
+ANALYTICS_RATE_LIMIT_PER_MIN=120
+ANALYTICS_RATE_LIMIT_BURST=30
+ANALYTICS_TENANT_RATE_LIMIT_PER_MIN=300
+ANALYTICS_TENANT_RATE_LIMIT_BURST=60
 ANOMALY_WAIT_THRESHOLD_SECONDS=1800
 ANOMALY_INTERVAL_SECONDS=300
 REALTIME_PORT=8085
+REALTIME_RATE_LIMIT_PER_MIN=120
+REALTIME_RATE_LIMIT_BURST=30
 REALTIME_POLL_SECONDS=1
 REALTIME_BATCH_SIZE=100
 NO_SHOW_GRACE_SECONDS=300
