US-NOTIF-003: add reminder trigger and providers

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ NOTIF_PORT=8082
 NOTIF_POLL_SECONDS=5
 NOTIF_BATCH_SIZE=50
 NOTIF_MAX_ATTEMPTS=3
+NOTIF_REMINDER_THRESHOLD=3
 NOTIF_SMS_PROVIDER=stub
 NOTIF_EMAIL_PROVIDER=stub
 NOTIF_WA_PROVIDER=stub
