chore: finalize remaining implementations

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ RATE_LIMIT_BURST=30
 TENANT_RATE_LIMIT_PER_MIN=600
 TENANT_RATE_LIMIT_BURST=120
 AUTH_PORT=8081
+AUTH_SSO_JWT_SECRET=
+AUTH_SSO_JWT_ISSUER=
 AUTH_RATE_LIMIT_PER_MIN=120
 AUTH_RATE_LIMIT_BURST=30
 AUTH_TENANT_RATE_LIMIT_PER_MIN=300
@@ -18,6 +20,14 @@ NOTIF_SMS_PROVIDER=stub
 NOTIF_EMAIL_PROVIDER=stub
 NOTIF_WA_PROVIDER=stub
 NOTIF_PUSH_PROVIDER=stub
+NOTIF_SMS_WEBHOOK_URL=
+NOTIF_SMS_WEBHOOK_TOKEN=
+NOTIF_EMAIL_WEBHOOK_URL=
+NOTIF_EMAIL_WEBHOOK_TOKEN=
+NOTIF_WA_WEBHOOK_URL=
+NOTIF_WA_WEBHOOK_TOKEN=
+NOTIF_PUSH_WEBHOOK_URL=
+NOTIF_PUSH_WEBHOOK_TOKEN=
 ADMIN_PORT=8083
 ADMIN_RATE_LIMIT_PER_MIN=120
 ADMIN_RATE_LIMIT_BURST=30
@@ -30,6 +40,9 @@ ANALYTICS_TENANT_RATE_LIMIT_PER_MIN=300
 ANALYTICS_TENANT_RATE_LIMIT_BURST=60
 ANOMALY_WAIT_THRESHOLD_SECONDS=1800
 ANOMALY_INTERVAL_SECONDS=300
+ANALYTICS_REPORT_INTERVAL_SECONDS=300
+ANALYTICS_REPORT_WEBHOOK_URL=
+ANALYTICS_REPORT_WEBHOOK_TOKEN=
 REALTIME_PORT=8085
 REALTIME_RATE_LIMIT_PER_MIN=120
 REALTIME_RATE_LIMIT_BURST=30
