chore: finalize remaining features and tests

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,14 @@ NOTIF_WA_WEBHOOK_URL=
 NOTIF_WA_WEBHOOK_TOKEN=
 NOTIF_PUSH_WEBHOOK_URL=
 NOTIF_PUSH_WEBHOOK_TOKEN=
+NOTIF_PREFS_PATH=
+NOTIF_EMAIL_SMTP_HOST=
+NOTIF_EMAIL_SMTP_PORT=587
+NOTIF_EMAIL_SMTP_USER=
+NOTIF_EMAIL_SMTP_PASS=
+NOTIF_EMAIL_FROM=
+NOTIF_SMS_HTTP_URL=
+NOTIF_SMS_HTTP_TOKEN=
 ADMIN_PORT=8083
 ADMIN_RATE_LIMIT_PER_MIN=120
 ADMIN_RATE_LIMIT_BURST=30
@@ -43,6 +51,16 @@ ANOMALY_INTERVAL_SECONDS=300
 ANALYTICS_REPORT_INTERVAL_SECONDS=300
 ANALYTICS_REPORT_WEBHOOK_URL=
 ANALYTICS_REPORT_WEBHOOK_TOKEN=
+ANALYTICS_REPORT_EMAIL_HOST=
+ANALYTICS_REPORT_EMAIL_PORT=587
+ANALYTICS_REPORT_EMAIL_USER=
+ANALYTICS_REPORT_EMAIL_PASS=
+ANALYTICS_REPORT_EMAIL_FROM=
+ANALYTICS_REPORT_EMAIL_SUBJECT=
+ANALYTICS_BI_API_TOKEN=
+
+OTEL_EXPORTER_OTLP_ENDPOINT=
+OTEL_EXPORTER_OTLP_INSECURE=false
 REALTIME_PORT=8085
 REALTIME_RATE_LIMIT_PER_MIN=120
 REALTIME_RATE_LIMIT_BURST=30
